--- a/.github/workflows/bun-mac-x64.yml
+++ b/.github/workflows/bun-mac-x64.yml
@@ -399,29 +399,29 @@ jobs:
         with:
           bun-version: canary
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Sign Release
-        id: sign-release
-        if: |
-          github.repository_owner == 'oven-sh'
-          && github.ref == 'refs/heads/main'
-        env:
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: |
-          echo "$GPG_PASSPHRASE" | bun run .scripts/sign-release.ts
-      - name: Release Checksum
-        id: release-checksum
-        uses: ncipollo/release-action@v1
-        if: |
-          github.repository_owner == 'oven-sh'
-          && github.ref == 'refs/heads/main'
-        with:
-          prerelease: true
-          body: "This canary release of Bun corresponds to the commit [${{ github.sha }}]"
-          allowUpdates: true
-          replacesArtifacts: true
-          generateReleaseNotes: true
-          artifactErrorsFailBuild: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: "Canary (${{github.sha}})"
-          tag: "canary"
-          artifacts: "SHASUMS256.txt,SHASUMS256.txt.asc"
+      # - name: Sign Release
+      #   id: sign-release
+      #   if: |
+      #     github.repository_owner == 'oven-sh'
+      #     && github.ref == 'refs/heads/main'
+      #   env:
+      #     GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      #   run: |
+      #     echo "$GPG_PASSPHRASE" | bun run .scripts/sign-release.ts
+      # - name: Release Checksum
+      #   id: release-checksum
+      #   uses: ncipollo/release-action@v1
+      #   if: |
+      #     github.repository_owner == 'oven-sh'
+      #     && github.ref == 'refs/heads/main'
+      #   with:
+      #     prerelease: true
+      #     body: "This canary release of Bun corresponds to the commit [${{ github.sha }}]"
+      #     allowUpdates: true
+      #     replacesArtifacts: true
+      #     generateReleaseNotes: true
+      #     artifactErrorsFailBuild: true
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     name: "Canary (${{github.sha}})"
+      #     tag: "canary"
+      #     artifacts: "SHASUMS256.txt,SHASUMS256.txt.asc"
