--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react": "^18.0.25",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "bun-webkit": "latest"
+    "bun-webkit": "0.0.1-dd868651f5c801985460c1128ae196d1edca9925"
   },
   "version": "0.0.0"
 }
